# Django

./: package.json  pyproject.toml
core/: settings.py  urls.py
pages/templates/pages/: home.html
resumes/: models.py  urls.py  views.py
resumes/forms/: __init__.py  archive_form.py
resumes/migrations/: 0001_initial.py
resumes/templates/resumes/: edit.html  index.html  new.html
templates/layouts/: base.html
